<resources>
    <string name="app_name">Crypto App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="not_found">Not Found any Data</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search crypto Currency</string>
    <string name="empty_watchlist">WatchList is Empty</string>
    <string name="_1m">1 min</string>
    <string name="_15m">15 min</string>
    <string name="_1h">1 hour</string>
    <string name="_4h">4 hour</string>
    <string name="_1d">1 day</string>
    <string name="_1w">1 week</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">OR</string>
    <string name="login_using_social_networks">Login using Social Networks</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="google_login">google login</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="mobile_login">mobile login</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="back_button">back button</string>
    <string name="welcome">Welcome</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
</resources>